# ChangeLog for x11-misc/synergy
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.56 2008/04/21 13:39:15 flameeyes Exp $

  21 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/synergy-1.3.1+gcc-4.3.patch, synergy-1.3.1.ebuild:
  Add patch to fix building with GCC 4.3.

  14 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml,
  synergy-1.2.4.ebuild, synergy-1.2.7.ebuild, synergy-1.2.8.ebuild:
  Removing Masatomo Nakano (nakano, #200340) from metadata.xml. Fixing the
  minor syntax errors.

  24 Feb 2008; Diego Pettenò <flameeyes@gentoo.org> synergy-1.3.1.ebuild:
  Fix building when extra warnings are enabled (think new version of GCC for
  instance), disabling -Werror; disable dependency tracking; don't dodoc
  non-present files, and use elog rather than einfo for the messages.

  26 Dec 2007; Samuli Suominen <drac@gentoo.org> synergy-1.3.1.ebuild:
  amd64 stable wrt #202664

  24 Dec 2007; Brent Baude <ranger@gentoo.org> synergy-1.3.1.ebuild:
  Marking synergy-1.3.1 ppc64 for bug 202664

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  synergy-1.3.1.ebuild:
  ppc stable, bug #202664

  20 Dec 2007; Raúl Porcel <armin76@gentoo.org> synergy-1.3.1.ebuild:
  alpha stable wrt #202664, thanks to Tobias Klausmann for testing

  19 Dec 2007; Jurek Bartuszek <jurek@gentoo.org> synergy-1.3.1.ebuild:
  x86 stable (bug #202664)

  18 Dec 2007; Ferris McCormick <fmccor@gentoo.org> synergy-1.3.1.ebuild:
  Sparc stable, Bug #202664 (in the tree 18 months, no bugs but enhancement
  requests).

  28 Nov 2007; Markus Rothe <corsair@gentoo.org> synergy-1.3.1.ebuild:
  Added ~ppc64

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; synergy-1.2.4.ebuild,
  synergy-1.2.7.ebuild, synergy-1.2.8.ebuild, synergy-1.3.1.ebuild:
  Drop virtual/x11 references.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2
