@@ -2,20 +2,14 @@
 Hash: SHA1
 
 AUX synergy-1.3.1+gcc-4.3.patch 4463 RMD160 e7c4fb526ec0011a3a9b9974dc20956ccef03a22 SHA1 b3a179405bc5b98c2379e13c27a760b543f7a476 SHA256 0dfcdedce8de2cf1285a7af30652eba7234d95d769f762774975ea4d0f293375
-DIST synergy-1.2.4.tar.gz 657909 RMD160 1a5b14d11a98a1fa2a3c248704d03cb7defd6760 SHA1 6d25fc694341e85cd7ed10e5d949919ec9900bb8 SHA256 f6bca503618e7eec458205f551ea590729cd16be51e56a4da44ba296d9e00a05
-DIST synergy-1.2.7.tar.gz 707319 RMD160 6bdbe5adbc13c2f49afcb99ccaa20b96a12c2bcf SHA1 5964460892fd9e9cb55c5bfe4e781f2bc08d0b76 SHA256 567a50863c04dc9ccf5def3c62bb9f0494e995357620603dd00bbe035ca7500e
-DIST synergy-1.2.8.tar.gz 701637 RMD160 d7ef787600b9e8b34b766f21f59757ba60db1693 SHA1 0ea53afb35f53ddd2f8aa4e2a2018d53540f2139 SHA256 78cb7603a3ecd9a52c477945270d51ba7d0e32888929fa2face5ec92878c6b2d
 DIST synergy-1.3.1.tar.gz 793172 RMD160 5f5d7cb8fcfb57a6c8eae83fb53c704cb85c6c16 SHA1 03113ec8aadfecaeba8e369b083f4fb5b44f5c62 SHA256 4a15e26456498dda5f3aa7d688a4892e0c50394a2f01685136fbc954bacc9691
-EBUILD synergy-1.2.4.ebuild 1081 RMD160 2dd94a43ce98745483acbbeef9a3223bc7893416 SHA1 0a14f8b811cbda77e71b62d932d89f249af7d8de SHA256 8d7f36a098859a5357fdc4e375f53cffbab7b607925bc6d7a34b797e9272c438
-EBUILD synergy-1.2.7.ebuild 1097 RMD160 1c4fc9d08dd1d4926d7d68291ebd097d86bb5de2 SHA1 618193e9dad874854c6c6036478a2f77afa31be4 SHA256 3848964bb5da85315f3e28c2cb1ad50db77daf5af7c327fe6b7ba4eeca9824cb
-EBUILD synergy-1.2.8.ebuild 1097 RMD160 a7ed8df983813a1e3305def6fd0ff0939aa4dac6 SHA1 b1c940f2628481663e3d7bd5b6dde4a8fd0d9c81 SHA256 8b13bc5c1bd197fd7cf3d815d5b3223c7b0031423ffa4bceecb5ff7111e7d6dd
 EBUILD synergy-1.3.1.ebuild 1352 RMD160 a0af92b240b7ef8debee473fa530d4098229f137 SHA1 c452a4c8967c0cb501709ae20824101132a89935 SHA256 1ee135de7cc4795101f531550b291a30a9fedc5315eb5cf1c0b976a5788a91bc
-MISC ChangeLog 7270 RMD160 f1a3e4e50f398ac5819ab925c87e71c76e952f8e SHA1 837d7c2f6304b9b765db96c0a7ff0f98cb33be96 SHA256 cbacbee650b0cade1116b1ad030df2ac22ed527abd7aee4afaf0e8807886090c
-MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
+MISC ChangeLog 7518 RMD160 7efbdfc7431de9cac64258f8151282e5e958e938 SHA1 c0bf4750b8bd9f9e1771af9362baa91a3b17f896 SHA256 7922eb7dd2343aacf7a7a02a933aed92ce353b037c090aa7bb64dbaec16132d7
+MISC metadata.xml 270 RMD160 6aa4dff8f35775a40f4d04bfca8e1e24161e9585 SHA1 d38202d496f7bbe77326209191e346917562d9ab SHA256 f683d99386ed59553eff64672bda4e5ecc840de7f5cdf8aa4c117b1dd3b2235a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkgMmQkACgkQAiZjviIA2Xi3egCeKKwTeGi9fv6/qt7e+Ogdp4tC
-iCUAoK+PebLRhc9UCWZqm7WkE1eZ0akA
-=EDsL
+iEYEARECAAYFAkgMo9QACgkQAiZjviIA2XhLqwCeN0QE6geZBvl0zYqMCNHT6YuY
+zu8AoLdF6aCCAB+cwHtOtY1Nhd9Qjyq3
+=Q/t7
 -----END PGP SIGNATURE-----
