@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>desktop-misc</herd>
+  <herd>desktop-misc</herd>
+  <maintainer>
+    <email>flameeyes@gentoo.org</email>
+    <name>Diego Pettenò</name>
+  </maintainer>
 </pkgmetadata>
