@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/synergy
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.56 2008/04/21 13:39:15 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/synergy/ChangeLog,v 1.57 2008/04/21 14:25:19 flameeyes Exp $
+
+  21 Apr 2008; Diego Pettenò <flameeyes@gentoo.org> metadata.xml,
+  -synergy-1.2.4.ebuild, -synergy-1.2.7.ebuild, -synergy-1.2.8.ebuild:
+  Add myself as maintainer, remove old 1.2 series in favour of the last
+  version that is stable everywhere.
 
   21 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
   +files/synergy-1.3.1+gcc-4.3.patch, synergy-1.3.1.ebuild:
